WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211938
REGRESION(
r261683
): [GStreamer] Several tests are failing
https://bugs.webkit.org/show_bug.cgi?id=211938
Summary
REGRESION(r261683): [GStreamer] Several tests are failing
Diego Pino
Reported
2020-05-15 00:34:19 PDT
The following tests started failing in range [
r261681
-
r261684
], likely due to
r261683
since it's the only revision that touches gstreamer code in that range: fast/mediastream/get-user-media-constraints.html [ Failure ] fast/mediastream/getUserMedia-video-rescaling.html [ Failure ] fast/mediastream/mediastreamtrack-video-clone.html [ Failure ] imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-MediaElement-firstframe.https.html [ Failure ] fast/mediastream/media-stream-renders-first-frame.html [ Timeout ] Diff:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r261684%20(13724)/fast/mediastream/get-user-media-constraints-diff.txt
--- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/fast/mediastream/get-user-media-constraints-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/fast/mediastream/get-user-media-constraints-actual.txt @@ -1,4 +1,4 @@ -PASS Ideal deviceId constraints +FAIL Ideal deviceId constraints assert_equals: expected 300 but got 0 Diff:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r261684%20(13724)/fast/mediastream/getUserMedia-video-rescaling-diff.txt
--- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/fast/mediastream/getUserMedia-video-rescaling-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/fast/mediastream/getUserMedia-video-rescaling-actual.txt @@ -1,6 +1,6 @@ -PASS wdith 100 height 100 video -PASS width 100 video -PASS height 100 video +FAIL wdith 100 height 100 video assert_equals: width expected 100 but got 0 +FAIL width 100 video assert_equals: width expected 100 but got 0 +FAIL height 100 video assert_equals: width expected 133 but got 0 Diff:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r261684%20(13724)/fast/mediastream/mediastreamtrack-video-clone-diff.txt
--- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/fast/mediastream/mediastreamtrack-video-clone-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/fast/mediastream/mediastreamtrack-video-clone-actual.txt @@ -5,9 +5,9 @@ PASS Setup for width test PASS Setup for height test PASS Setup for width+height test -PASS Stopping a track should not stop its clone -PASS Stopping a cloned track should not stop the original track -PASS Collecting a cloned track should not stop the original track +FAIL Stopping a track should not stop its clone assert_equals: expected 100 but got 0 +FAIL Stopping a cloned track should not stop the original track assert_equals: expected 100 but got 0 +FAIL Collecting a cloned track should not stop the original track assert_equals: expected 100 but got 0 PASS Check cloned track settings after applying width constraints PASS Check cloned track settings after applying width constraint to original track PASS Check cloned track settings after applying height constraints Diff:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r261684%20(13724)/imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-MediaElement-firstframe.https-diff.txt
--- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-MediaElement-firstframe.https-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-MediaElement-firstframe.https-actual.txt @@ -1,3 +1,7 @@ +CONSOLE MESSAGE: Error: assert_unreached: Got unexpected event loadedmetadata Reached unreachable code +CONSOLE MESSAGE: Error: assert_unreached: Got unexpected event loadeddata Reached unreachable code +CONSOLE MESSAGE: Error: assert_unreached: Got unexpected event canplay Reached unreachable code +CONSOLE MESSAGE: Error: assert_unreached: Got unexpected event canplaythrough Reached unreachable code When prompted, accept to share your video stream. Description @@ -7,5 +11,5 @@ PASS Tests that loading a MediaStream in a media element eventually results in "canplay" even when not playing or autoplaying -PASS Tests that loading a MediaStream in a media element sees all the expected (deterministic) events even when not playing or autoplaying +FAIL Tests that loading a MediaStream in a media element sees all the expected (deterministic) events even when not playing or autoplaying assert_not_equals: videoWidth is something after "resize" got disallowed value 0 Diff:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Release%20(Tests)/r261684%20(13724)/fast/mediastream/media-stream-renders-first-frame-diff.txt
--- /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/fast/mediastream/media-stream-renders-first-frame-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release-tests/build/layout-test-results/fast/mediastream/media-stream-renders-first-frame-actual.txt @@ -1,4 +1,3 @@ +CONSOLE MESSAGE: IndexSizeError: The index is not in the allowed range. +FAIL: Timed out waiting for notifyDone to be called - -PASS A frame from the camera is shown before playback begins. -
Attachments
Patch
(2.83 KB, patch)
2020-05-15 03:30 PDT
,
Alicia Boya García
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.57 KB, patch)
2020-05-15 06:55 PDT
,
Alicia Boya García
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alicia Boya García
Comment 1
2020-05-15 03:05:28 PDT
This is a subtle bug caused by the redefinition of m_currentVideoStreamId. After the patch, a track is only "current" after pre-roll and track selection are complete. But video size can and needs to be queried in an early state.
Alicia Boya García
Comment 2
2020-05-15 03:30:46 PDT
Created
attachment 399468
[details]
Patch
Philippe Normand
Comment 3
2020-05-15 03:36:45 PDT
Comment on
attachment 399468
[details]
Patch Can you unskip the tests then?
Philippe Normand
Comment 4
2020-05-15 04:12:45 PDT
Comment on
attachment 399468
[details]
Patch Thanks for the quick fix :) r=me with updated TestExpectations.
Alicia Boya García
Comment 5
2020-05-15 06:55:34 PDT
Created
attachment 399476
[details]
Patch for landing
EWS
Comment 6
2020-05-15 07:40:56 PDT
Committed
r261744
: <
https://trac.webkit.org/changeset/261744
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399476
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-05-15 07:41:14 PDT
<
rdar://problem/63272320
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug